Changed title article 6. Changed height for news boxes in both tablet view and desktop view. Removed padding between image and heading in news boxes.

--- a/code/style.css
+++ b/code/style.css
@@ -263,7 +263,11 @@ footer {
   }
   
   .news a {
-    height: 410px;
+    height: 380px;
+  }
+
+  .news a img {
+    padding-bottom: 0;
   }
 
   .news a div {
@@ -308,6 +312,19 @@ footer {
     flex-basis: 20%;
     text-align: left;
     /** add padding/margin?**/
+  }
+
+  .news a {
+    height: 380px;
+  }
+
+  .news a img {
+    padding-bottom: 0;
+  }
+
+  .news a div {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .news article {
