har ändrat på navigationsbaren

--- a/code/style.css
+++ b/code/style.css
@@ -428,7 +428,7 @@ button.dropbtn img {
     width: 52px;
   }  */
 
-  a.home2, .one2, .two, .three {
+  a.home2, .politics, .sport, .culture {
     width: 112px;
     height: 50px;
     font-size: 28px;
@@ -470,11 +470,11 @@ button.dropbtn img {
     width: 40%;
   }
 
-  .home2, .one2 {
+  .home2, .politics {
     display: none;
   }
 
-  a.home1, .one1, .two, .three {
+  a.home1, .politics1, .sport, .culture {
     width: 174px;
     height: 50px;
     padding: 0;
