Har ändrat på paragrafen och a href

--- a/code/style.css
+++ b/code/style.css
@@ -188,14 +188,15 @@ img {
 
 .text {
   color:white;
-  font-size: 12px; 
+  font-size: 18px; 
   position:relative;
   top: 30%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: left; /*kan även göra center */
+
 }
 
 
