Changed box shadow on all of the boxes to create a smoother shadow. Added border radius to each box. Changed class name for header in separate html filesto be more clear.

--- a/code/style.css
+++ b/code/style.css
@@ -32,7 +32,7 @@ header {
   margin: 10 px auto;
 }
 
-.articles {
+.articles-header, .contact-header, .hamburgermenu-header, .about-header {
   background-color: white;
   color: darkslategrey;
   display: flex;
@@ -95,7 +95,12 @@ nav {
   align-items: center;
   flex-direction: column;
   Box-sizing: border-box;
-  box-shadow: 2px 2px lightgrey;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  border-radius: 3px;
   width: 100%;
   /*max-width: 1100px;*/
 }
@@ -138,13 +143,27 @@ nav {
   color: black;
   text-decoration: none;
   width: 100%;
-  box-shadow: 2px 2px lightgray;
-  /*padding-right:15px;*/
+  /*box-shadow: 2px 2px lightgray;*/
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  border-radius: 3px;
 }
 
 .news a div {
   padding: 15px;
 }
+
+/** .news a:hover {
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  transition: 0,5s; }STYLE THIS **/
+
 
 /*** Styling the footer ***/
 
@@ -168,9 +187,14 @@ footer {
   flex-direction: column;
   align-items: center;
   box-sizing:border-box;
-  box-shadow: 2px 2px lightgray;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  border-radius: 3px;
   width: 90%;
-  max-width: 1100px;
+  max-width: 1100px; /** REMOVE THIS?**/
   margin: 0 auto;
 }
 
@@ -185,13 +209,19 @@ footer {
   background-color: white;
   padding: 10px;
   border: 2px solid light grey;
-  box-shadow: 2px 2px lightgray;
+  /**box-shadow: 2px 2px lightgray;**/
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing:border-box;
   width: 40%;
-  max-width: 1100px;
+  max-width: 1100px; /** remove this? **/
   margin: 20px auto; 
 }
 
@@ -199,13 +229,19 @@ footer {
   background-color: white;
   padding: 10px;
   border: 2px solid  light grey;
-  box-shadow: 2px 2px lightgray;
+  /** box-shadow: 2px 2px lightgray; **/
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing:border-box;
   width: 40%;
-  max-width: 1100px;
+  max-width: 1100px; /**Remove this?**/
   margin: 20px auto; 
 }
 
@@ -261,7 +297,7 @@ footer {
     padding: 15px;
     /**Add padding ?**/
   }
-  
+
   .news a {
     height: 380px;
   }
