Added hover effect to nav bar

--- a/code/style.css
+++ b/code/style.css
@@ -74,6 +74,16 @@ nav {
   display: none 
 }
 
+nav a:hover {
+  color: black;
+  font-weight: bold;
+}
+
+nav a:active {
+  color: blue;
+  font-weight: bold;
+}
+
 /*** Styling the big news section ***/ 
 
 .breaking-news {
