--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,14 @@
+.latest {
+  border: 2px solid blue;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  flex-wrap: wrap;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*-----------Navbar------------ */
 
 ul {
