--- a/code/style.css
+++ b/code/style.css
@@ -18,8 +18,17 @@ body{
   margin: 8px;
   padding: 8px;
 }
+section{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+article{
+  flex: 350px;
+}
 
 ul{
+  font-size: 22px;
   display: flex;
   list-style-type: none;
   flex-wrap: nowrap;
@@ -29,6 +38,23 @@ ul{
   margin-bottom: 40px;
   padding: 0;
   font-family: 'Abril Fatface', cursive;
+}
+
+p{
+  font-family: 'Amiri', serif;
+  font-size: 20px;
+  line-height: 1.3;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: justify;
+  font-weight: bold;
+}
+.author{
+  font-size: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 h1{
@@ -43,18 +69,20 @@ h2{
   font-family: 'Abril Fatface', cursive;
   font-size: 40px;
   margin-bottom: 0px;
+  margin-top: 0px;
   padding-left: 10px;
   padding-right: 10px;
 }
 
 h3{
   font-family: 'Abril Fatface', cursive;
-  font-size: 20px;
+  font-size: 35px;
   padding-left: 10px;
   padding-top: 0px;
   padding-right: 10px;
   padding-bottom: 0px;
   margin-bottom: 2px;
+  margin-top: 15px;
 }
 
 .mainarticle{
@@ -64,34 +92,14 @@ h3{
   padding-bottom: 20px;
   margin-bottom: 15px;
   margin-top: 0px;
+  border: 0px;
 }
 
 .img-artist{
   margin-bottom: 0px;
-  max-width: 100%;
-}
-
-.author{
-  font-size: 15px;
-  padding-top: 0px;
   padding-bottom: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-p{
-  font-family: 'Amiri', serif;
-  font-size: 20px;
-  line-height: 1.3;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: justify;
-  font-weight: bold;
-}
-
-.previous-artists{
-  display: flex;
-  flex-direction: column;
+  max-width: 100%;
+  border: 0px;
 }
 
 .loyle{
@@ -151,6 +159,36 @@ p{
     font-size: 50px;
     text-align: center;
   } 
+  h2{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  h3{
+    margin-top: 0px;
+    font-size: 20px;
+  }
+  .author{
+    font-size: 20px;
+  }
+  .p-mainarticle{ 
+    font-size: 25px;
+    padding: 15px;
+  }
 
+  article{
+    flex: 300px;
+    padding: 10px;
+    margin: 10px;
+  }
+
+  .img-artist{
+    width:750px;
+    height: auto;
+  }
+  ul{
+    font-size: 34px;
+  }
 }
   
