--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,7 @@ html {
   color:grey;
 }
 
-
+/*header layout*/
 .header {
   background-image: url("https://images.unsplash.com/photo-1497105943914-b90d55145023?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1270&q=80");
   background-repeat: no-repeat;
@@ -33,7 +33,6 @@ html {
     font-family: Verdana, sans-serif;
     font-weight: bolder;
     font-size: 20px;
-    color: #835F80;
   }
 
   .nav-item {
@@ -41,15 +40,54 @@ html {
     padding: 10px;
   }
   
+
+
+
+
+
+
+
+  /*adjustment for screens max-width 500px*/
   @media (max-width: 500px) {
     .nav {
-      font-size: 9px;
+      font-size: 10px;
       justify-content: center;
     }
     .flex-container {
       justify-content: center;
     }
+   .main {
+      padding-top:40px;
+   }
+   .big-news{
+      margin:10px;
+   }
+    #big-news-h1 {
+      text-align: center;
+      font-size: 20px;
+    }
+    #big-news-p {
+      font-size: 14px;
+    }
+    .footer {
+      font-size: 10px;
+    }
+    .other-news{
+      padding-top:10px;
+      padding-bottom: 40px;
+      background-color: #C5E3D5;
+    }
+    .other-news-item{
+      padding: 0 0 2px 0;
+      background-color:#E2F3EB;
+      margin: 10px;
+    }
+    .other-news-item h3 {
+      font-size: 15px;
+    }
   }
+
+
 
   @media (width:768px) {
     .nav {
@@ -68,11 +106,13 @@ html {
     
     }
 
+    
+
     #big-news-h1 {
       font-family: 'Yusei Magic', sans-serif;
     }
     #big-news-p {
-      padding-left: 40px;
+      padding-left: 30px;
     }
 
     .other-news h3 {
@@ -82,7 +122,8 @@ html {
   /*effekter länkar*/
 a:link {
   text-decoration: none;
-  color: grey;
+  /*color: grey;*/
+  color: #835F80;
  
 }
 
@@ -167,17 +208,43 @@ a #fourth:hover{
    #img-big {
      width: 60%;
    }*/
- 
+ .big-news{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+   justify-content:center;
+   margin: 5px;
+   
+   
+   
+     background-color: #C5E3D5;
+ }
+
    .big-news-item1 {
- width: 60%;
- margin: 2%;
+ width: 55%;
+padding:10px;
+margin: 5px;
+height: 276px;
+ background-color:#E2F3EB;
+ /*margin: 2%;*/
  
    }
  
    .big-news-item2 {
-     width: 30%;
-     margin: 2%;
+     width: 35%;
+     margin: 5px;
+     height: 276px;
+     background-color:#E2F3EB;
+    padding: 10px;
+    
+    
+    
    }
+   #big-news-h1 {
+     text-align: center;
+     font-size: 20px;
+   }
+  
  /*
    #head-news-h1 {
      width: 50%;
@@ -192,13 +259,23 @@ a #fourth:hover{
      display: flex;
      flex-wrap: wrap;
      flex-direction: row;
+     justify-content: center ;
+     background-color: #C5E3D5;
+     padding-bottom: 40px;
+    
+     
     
    }
    .other-news-item {
-     width: 50%;
-   
+     width: 45%;
+     margin: 4px;
+     padding: 10px;
+  
+
+    
    }
- }
+   
+  }
 
  
  @media (min-width:800px) {
