--- a/code/style.css
+++ b/code/style.css
@@ -1,34 +1,117 @@
+/* DEBUG STYLES : Delete on deploy*/
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #f1f1f1;
 }
+header,
+section,
+footer {
+  background: rgb(189, 189, 189);
+  border: 1px solid black;
+}
+.title,
+.promo-1,
+.promo-2,
+.nav-links {
+  background: rgb(170, 229, 170);
+  border: 1px solid black;
+}
+/* End of DEBUG STYLES */
 
 /* Default sizing Desktop breakpoint */
 
-.big-news {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+/* Main Grid Layout */
+/* GRID DISPLAYS */
+body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 0px 0px;
+  grid-template-areas:
+    "header header"
+    "hero hero"
+    "news-mosiac news-column"
+    "news-list news-list"
+    "footer footer";
 }
 
-img {
-  margin-top: 10px;
-  margin-right: 10px;
-  width: 230px;
-  height: 240px;
+header {
+  display: grid;
+  grid-template-columns: 25% 1fr 25%;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 5px 5px;
+  grid-area: header;
+  grid-template-areas:
+    "promo-1 title promo-2"
+    "nav-links nav-links nav-links";
+}
+
+.hero {
+  grid-area: hero;
+}
+
+.news-mosiac {
+  grid-area: news-mosiac;
+}
+
+footer {
+  grid-area: footer;
+}
+
+/* GRID AREAS */
+
+.news-list {
+  grid-area: news-list;
+}
+.news-column {
+  grid-area: news-column;
+}
+.nav-links {
+  grid-area: nav-links;
+}
+.title {
+  grid-area: title;
+}
+.promo-1 {
+  grid-area: promo-1;
+}
+.promo-2 {
+  grid-area: promo-2;
+}
+.btn-side-nav {
+  display: none;
 }
 
 /* Sizing for Tablets */
 @media (min-width: 668px) and (max-width: 1024px) {
-  img {
-    border: 5px solid black;
-    justify-content: space-around;
-  }
 }
 
 /* Sizing for Mobile */
 @media (max-width: 667px) {
-  img {
-    border: 5px solid pink;
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas:
+      "header"
+      "hero"
+      "news-mosiac"
+      "news-column"
+      "news-list"
+      "footer";
+  }
+
+  header {
+    grid-template-columns: 25% 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "side-nav title";
+  }
+
+  .btn-side-nav {
+    grid-area: side-nav;
+    display: inline-block;
+  }
+
+  nav,
+  header > figure {
+    display: none;
   }
 }
