--- a/code/style.css
+++ b/code/style.css
@@ -85,12 +85,12 @@ img {
 }
 
 .inside-big img {
-  width: 470px;
+  width: 510px;
   height: 300px;
 }
 
 .pic {
-  width: 40%;
+  width: 45%;
 }
 
 .text1 {
@@ -262,8 +262,10 @@ a {
     width: 60%;
     align-items: center;
     justify-content: center;
-  
+    font-size: 22px;
   }
+
+
   
   .text2 {
     display: none;
@@ -379,6 +381,10 @@ a {
   .text {
     font-size: 40px;
     font-weight: bold;
+  }
+
+  .text1 {
+    font-size: 22px;
   }
 
 }
