--- a/code/style.css
+++ b/code/style.css
@@ -18,13 +18,10 @@ body{
   margin: 8px;
   padding: 8px;
 }
+
 section{
   display: flex;
   flex-wrap: wrap;
-}
-
-article{
-  flex: 350px;
 }
 
 ul{
@@ -69,7 +66,7 @@ h2{
   font-family: 'Abril Fatface', cursive;
   font-size: 40px;
   margin-bottom: 0px;
-  margin-top: 0px;
+  margin-top: 15px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -82,7 +79,7 @@ h3{
   padding-right: 10px;
   padding-bottom: 0px;
   margin-bottom: 2px;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .mainarticle{
@@ -96,8 +93,8 @@ h3{
 }
 
 .img-artist{
-  margin-bottom: 0px;
-  padding-bottom: 0px;
+  margin: 0px;
+  padding: 0px;
   max-width: 100%;
   border: 0px;
 }
@@ -137,7 +134,6 @@ h3{
   margin-bottom: 15px;
   padding: 15px;  
 }
-
 .joy{
   background-color:#5B4857;
   height: 250px;
@@ -145,7 +141,6 @@ h3{
   margin-bottom: 15px;
   padding: 15px;
 }
-
 .arlo{
   background-color: #9A87E1;
   height: 250px;
@@ -179,14 +174,10 @@ h3{
 
   article{
     flex: 300px;
-    padding: 10px;
+ 
     margin: 10px;
   }
 
-  .img-artist{
-    width:750px;
-    height: auto;
-  }
   ul{
     font-size: 34px;
   }
