--- a/code/style.css
+++ b/code/style.css
@@ -19,6 +19,7 @@ html {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  width: 100%;
 }
 
 .flex-child {
@@ -71,6 +72,7 @@ nav {
   align-items: center;
   justify-content: space-evenly;
   display: flex;
+  width: 100%;
 }
 
 .big-news-img {
@@ -88,9 +90,8 @@ h2 {
   font-size: 20px;
 }
 
-img {
-  width: 300px;
-  height: 200px;
+img { 
+  width: 100%;
   border-radius: 25px;
   object-fit: cover;
 }
@@ -110,6 +111,7 @@ p {
   display: grid;
   flex-direction: row;
   flex-wrap: wrap;
+  width:100%;
 }
 
 .grid-item1, .grid-item2, .grid-item3, .grid-item4, .grid-item5, .grid-item6, .grid-item7 {
@@ -120,6 +122,8 @@ p {
   align-items: center;
   align-content: center;
   flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 666px) {
@@ -127,6 +131,13 @@ p {
     flex-direction: row;
     flex-wrap: wrap;
   }
+
+  .flex-parent {
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
   .grid-container {
     grid-template-columns: 1fr;
     grid-gap: 5px;
